--- a/typescript.html
+++ b/typescript.html
@@ -8,7 +8,7 @@
        <h2>STUDENTS INFORMATION</h2>
        </center>
     <div id="res">
-<script src="table1.js">
+<script src="typescript.js">
   
 </script>
   </div>
